nav - collapse 1.5x then 1x

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,4 +1,12 @@
+// grid
+// mobile: 5 colums
+// 769: 9
+// 1441: 12
+// 1900: 15
 
+$bkpt-grid-9: 769px;
+$bkpt-grid-12: 1441px;
+$bkpt-grid-15: 1900px;
 
 $rem: 12px;
 $basefont: 13px;
