--- a/src/style/_atomic.scss
+++ b/src/style/_atomic.scss
@@ -1,6 +1,9 @@
 .hidden{
   display: none;
 }
+.opacity-0{
+  opacity:0;
+}
 
 .fixed{
   position: fixed;
@@ -139,6 +142,10 @@
 
 .pointer{
   cursor:pointer;
+}
+
+.fades{
+  transition: opacity 500ms;
 }
 
 // media query based
