--- a/src/style/_atomic.scss
+++ b/src/style/_atomic.scss
@@ -47,6 +47,9 @@
 .w-100{
   width:100%;
 }
+.h-100{
+  height:100%;
+}
 .min-h-100{
   min-height: 100vh;
 }
@@ -74,6 +77,10 @@
   top:0; left:0; right:0; bottom:0;
   width:100%;
   height:100%;
+}
+
+.overflow-hidden{
+  overflow:hidden;
 }
 
 .mt1{
@@ -186,6 +193,9 @@
   }
   .mbl-pt-1row{
     padding-top: 25%;
+  }
+  .mbl-bg-white{
+    background-color:$white;
   }
 }
 @include grid9{
