--- a/src/style/_atomic.scss
+++ b/src/style/_atomic.scss
@@ -9,6 +9,7 @@
 .z0{ z-index:0;}
 .z1{ z-index:1;}
 .z2{ z-index:2;}
+.z3{ z-index:3;}
 .z-nav{ z-index:10;}
 .z-overlay{ z-index:50;}
 
@@ -93,6 +94,8 @@
 
 .pointer{cursor:pointer;}
 .pointer-events-none{pointer-events:none;}
+
+.tap-color-none{-webkit-tap-highlight-color: rgba(0,0,0,0);}
 
 .fades{transition: opacity 500ms;}
 
