--- a/src/style/_atomic.scss
+++ b/src/style/_atomic.scss
@@ -94,9 +94,18 @@
 .justify-between{justify-content: space-between;}
 .justify-end{justify-content: flex-end;}
 .items-center{align-items:center;}
+.items-start{align-items:flex-start;}
 .items-end{align-items:flex-end;}
 .item-fill{flex:1 0 100%;}
 .item-divide{flex:1 0 0;}
+
+.clear{
+  &:after{
+    content:'';
+    display: block;
+    clear: both;
+  }
+}
 
 .list-style-none{list-style-type: none;}
 
@@ -130,24 +139,14 @@
 // media query based
 
 @include mobile {
-  .mbl-hidden{
-    display: none !important;
-  }
-  .mbl-block{
-    display:block;
-  }
-  .mbl-w-75{
-    width:75%;
-  }
-  .mbl-pt-1row{
-    padding-top: 25%;
-  }
-  .mbl-bg-white{
-    background-color:$white;
-  }
+  .mbl-hidden{ display: none !important }
+  .mbl-block{ display:block }
+  .mbl-w-75{ width:75% }
+  .mbl-pt-1row{ padding-top: 25% }
+  .mbl-bg-white{ background-color:$white }
+  .mbl-mt3{ margin-top: rem(36px) }
+  .mbl-pb-25vh{padding-bottom: 25vh;}
 }
 @include grid9{
-  .tblt-hidden{
-    display:none !important;
-  }
+  .tblt-hidden{display:none !important }
 }
