--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -10,6 +10,8 @@ $mobile: 768px;
 $bkpt-grid-9: 769px;
 $bkpt-grid-12: 1441px;
 $bkpt-grid-15: 1900px;
+$bkpt-navCondense-25: $mobile + 1;
+$bkpt-navCondense-50: 1280px;
 
 $rem: 12px;
 $basefont: 13px;
