OverlayHeader - only pointer-events on links

--- a/src/style/_atomic.scss
+++ b/src/style/_atomic.scss
@@ -111,6 +111,7 @@
 .list-style-none{list-style-type: none;}
 
 .pointer{cursor:pointer;}
+.pointer-events{pointer-events:auto}
 .pointer-events-none{pointer-events:none;}
 
 .tap-color-none{-webkit-tap-highlight-color: rgba(0,0,0,0);}
