CompareAtPrice with .strikethrough

--- a/src/style/_atomic.scss
+++ b/src/style/_atomic.scss
@@ -5,6 +5,8 @@
 .inline-block{ display:inline-block}
 .opacity-0{ opacity:0;}
 
+.strikethrough{text-decoration: line-through;}
+
 .fixed{ position: fixed;}
 .absolute{ position: absolute;}
 .relative{ position: relative;}
